--- a/src/view/index.html
+++ b/src/view/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head> 
         <%= require('html-loader!./layout/head-common.html')  %>
-        <title>MMall电商平台 - 学习项目</title>
+        <title>MMall电商平台 - 努力学习和改进！</title>
     </head>
     <body>
         <%= require('html-loader!./layout/nav.html')  %>
