--- a/src/view/about.html
+++ b/src/view/about.html
@@ -18,9 +18,9 @@
         </div>
         <div class="page-wrap w">
             <div class="panel">
-                <h1 class="panel-title">关于我们</h1>
+                <h1 class="panel-title">关于该项目</h1>
                 <div class="panel-body">
-                    欢迎访问happymmall。这是一个电商教学演示网站。
+                    欢迎访问本网站！
                 </div>
             </div>
         </div>
