--- a/src/view/layout/footer.html
+++ b/src/view/layout/footer.html
@@ -1,13 +1,13 @@
 <div class="footer">
     <div class="w">
         <div class="links">
-            <a class="link" href="http://www.imooc.com" target="_blank">慕课网</a> |
+            <a class="link" href="http://www.bilibili.com" target="_blank">哔哩哔哩</a> |
             <a class="link" href="https://www.baidu.com" target="_blank">百度</a> |
             <a class="link" href="https://www.taobao.com" target="_blank">淘宝</a> |
             <a class="link" href="https://www.zhihu.com" target="_blank">知乎</a>
         </div>
         <p class="copyright">
-            Copyright © 2017 ivwsngghd.top All Right Reserved
+            Copyright © 2020 ivwsngghd.top All Right Reserved
         </p>
     </div>
 </div>
